syntax = "proto3";
package janction.videoRendering.v1;

option go_package = "github.com/janction/videoRendering";

import "janction/videoRendering/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";

// Query defines the module Query service.
service Query {
  // GetVideoRenderingTask returns the task based on the taskId
  rpc GetVideoRenderingTask(QueryGetVideoRenderingTaskRequest) returns (QueryGetVideoRenderingTaskResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
      "/janction/videoRendering/v1/{index}";
  }

  rpc GetPendingVideoRenderingTasks(QueryGetPendingVideoRenderingTaskRequest) returns (QueryGetPendingVideoRenderingTaskResponse){
  }
}

// QueryGetGameRequest is the request type for the Query/GetGame RPC
// method.
message QueryGetVideoRenderingTaskRequest {
  string index = 1;
}

// QueryGetGameResponse is the response type for the Query/GetGame RPC
// method.
message QueryGetVideoRenderingTaskResponse {
  // Game defines the game at the requested index.
  VideoRenderingTask video_rendering_task = 1;
}

message QueryGetPendingVideoRenderingTaskRequest {
  
}

message QueryGetPendingVideoRenderingTaskResponse {
  repeated VideoRenderingTask video_rendering_tasks = 1;
}
