syntax = "proto3";
package janction.videoRendering.v1;

option go_package = "github.com/janction/videoRendering";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

// Params defines the parameters of the module.
message Params {}

// GenesisState is the state that must be provided at genesis.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}


